# kagent-zan

./: .dockerignore  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTION.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  backend_log.txt  go.work.sum  package-lock.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  image-scan.yaml  lint-python.yaml  run-agent-framework-test.yaml  tag.yaml  test.yaml  tools_tests.yaml
cli/: Makefile  go.mod  go.sum
conf/: supervisord.conf
controller/: PROJECT  README.md  go.mod
controller/cmd/: main.go
docs/: mcp-tool-testing.md
examples/: 1-team-resources.yaml  2-team-resources.yaml  README.md  autogen-team.json  team-with-user.json
go/: Dockerfile  Makefile  README.md  go.mod  go.sum
go/cli/: Makefile
go/controller/: Makefile  PROJECT  README.md
go/tools/: tools.go
helm/: .gitignore  Chart-template.yaml  Chart.yaml  README.md  values.yaml
helm/crds/: agent.ai.solo.io_autogenagents.yaml  agent.ai.solo.io_autogenmodelconfigs.yaml  agent.ai.solo.io_autogenteams.yaml  kagent.dev_agents.yaml  kagent.dev_modelconfigs.yaml  kagent.dev_teams.yaml
helm/kagent/: Chart-template.yaml  values.yaml
helm/kagent-crds/: Chart-template.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  appService.yaml  argo-rollouts-agent.yaml  clusterrole.yaml  clusterrolebinding.yaml  (+11 more)
k8s/: strava-mcp-server.yaml
python/: .dockerignore  Dockerfile  LICENSE-CODE  Makefile  README.md  hello.py  main.py  pyproject.toml  test.ipynb  tools.json
python/agents/: README.md  helm_agent.json  observability.json  resource_creator.json
python/kagent/prompts/: __init__.py
python/kagent/tools/common/: shell.py
python/notebooks/: all_docs_agent copy.ipynb  all_docs_agent.ipynb  argo_agent.ipynb  argo_rollouts_convert_deployment_agent.ipynb  argo_rollouts_convert_deployment_agent_example.py  argo_rollouts_debug_agent.ipynb  argo_rollouts_debug_agent_example.py  argo_rollouts_installation_agent.ipynb  argo_rollouts_installation_agent_example.py  docs_agent.ipynb  istio_agent.ipynb  istio_docs_agent.ipynb  k8s_agent.ipynb  kubectl.ipynb  kubernetes_docs_agent.ipynb  mcp.ipynb  print_tool.ipynb  prometheus.ipynb  test.ipynb  test.py
python/orchestrator/: model.py  orchestrator.py
python/prompts/: __init__.py  _istio_crd.py  base.py
python/src/autogenstudio/datamodel/: __init__.py  db.py
python/src/autogenstudio/gallery/tools/: bing_search.py
python/src/autogenstudio/sessionmanager/: __init__.py  sessionmanager.py
python/src/autogenstudio/teammanager/: teammanager.py
python/src/autogenstudio/toolservermanager/: toolserver_manager.py
python/src/autogenstudio/validation/: component_test_service.py
python/src/autogenstudio/web/: app.py  deps.py
python/src/autogenstudio/web/managers/: connection.py
python/src/autogenstudio/web/routes/: feedback.py  invoke.py  models.py  runs.py  sessions.py  tool_servers.py
python/src/kagent/: __init__.py  cli.py  mcp_server.py
python/src/kagent/agents/: __init__.py  _society_of_mind_agent.py  _task_agent.py
python/src/kagent/memory/: __init__.py  _pinecone_memory.py
python/src/kagent/orchestrator/: model.py  orchestrator.py
python/src/kagent/prompts/: _istio_crd.py  models.py
python/src/kagent/terminations/: __init__.py  _text.py
python/src/kagent/tests/: _test_result.py  _yaml_comparer.py  test_generate_resource.py
python/src/kagent/tests/testcases/: auth_policy_tests.yaml
python/src/kagent/tool_servers/: __init__.py  _ssemcptoolserver.py  _stdiomcptoolserver.py
python/src/kagent/tools/: __init__.py  _built_in.py  _solo_tool.py  _utils.py  test_tool.py
python/src/kagent/tools/argo/: __init__.py  _argo_crds.py  _argo_rollouts.py  _argo_rollouts_k8sgw_installation.py  _kubectl_argo_rollouts.py
python/src/kagent/tools/argo/prompts/: __init__.py  analysis_template.py  base.py  rollout.py
python/src/kagent/tools/cilium/: __init__.py  _cilium.py  _cilium_dbg.py
python/src/kagent/tools/common/: __init__.py  _llm_tool.py  client.py  llm_tool.py  shell.py
python/src/kagent/tools/crds/: __init__.py  _crd_creator_tool.py  _models.py  _prompt_registry.py  _resource_types.py
python/src/kagent/tools/crds/argo/: _rollout.py
python/src/kagent/tools/crds/istio/: _peer_auth.py
python/src/kagent/tools/crds/promql/: __init__.py  _promql.py
python/src/kagent/tools/datetime/: __init__.py  _current_date_time.py
python/src/kagent/tools/docs/: README.md  __init__.py  _search_documentation.py  chunk-and-write.py  crawl-docs.py  query_documentation.py
python/src/kagent/tools/grafana/: __init__.py  _grafana.py
python/src/kagent/tools/helm/: __init__.py  _helm.py
python/src/kagent/tools/istio/: __init__.py  _istio_crds.py  _istioctl.py
python/src/kagent/tools/istio/prompts/: __init__.py  base.py  gateway.py  virtual_service.py
python/src/kagent/tools/k8s/: __init__.py  _generate_resource.py  _kubectl.py  _models.py  _prompt_registry.py  _resource_types.py
python/src/kagent/tools/k8s/argo/: __init__.py
python/src/kagent/tools/k8s/gateway_api/: __init__.py  _gateway.py  _gateway_class.py  _grpc_route.py  _http_route.py  _reference_grant.py
python/src/kagent/tools/k8s/istio/: __init__.py  _auth_policy.py  _virtual_service.py
python/src/kagent/tools/prometheus/: __init__.py  _prometheus.py  _promql.py
python/src/kagent/tools/utils/: agent_gen.py  tool_gen.py
python/tests/: README.md  _test_result.py  agent_tester.py  comparator.py  loader.py  main.py  schema.py  test_generate_resource.py  test_load_agents.py
python/tests/agents/: istio_crd_agent_0.yaml  istio_crd_agent_1.yaml
python/tests/test_cases/: authpolicy_test_cases.yaml
python/tools/: server.py
python/tools/common/: shell.py
python/tools/istio/: __init__.py  _istioctl.py
python/tools/k8s/: __init__.py  _kubectl.py
scripts/: get-kagent
ui/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cypress.config.ts  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+398 files in other folders)
