[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "autogen-core>=0.4.3",
  "autogen-ext[mcp]>=0.4.3",
  "autogen-agentchat>=0.4.3",
  "autogenstudio>=0.4.3",
  "openai==1.60.0",
  "tiktoken==0.8.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "mcp>=1.2.0",
  "sqlite-vec>=0.1.0",
  "typer",
  "numpy>=2.2.3",
]

[project.optional-dependencies]
jupyter-executor = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
]
lint = [
  "ruff>=0.9.2",
]

[project.scripts]
kagent = "kagent.cli:run"
tool_gen = "kagent.tools.utils.tool_gen:main"

[tool.uv.sources]
autogenstudio = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-studio", rev = "57baad93f587efe26422c0b2c6b16a26af388c6c" }
autogen-agentchat = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-agentchat", rev = "57baad93f587efe26422c0b2c6b16a26af388c6c" }
autogen-ext = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-ext", rev = "57baad93f587efe26422c0b2c6b16a26af388c6c" }
autogen-core = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-core", rev = "57baad93f587efe26422c0b2c6b16a26af388c6c" }
kagent = { workspace = true }

[tool.ruff]
line-length = 120
fix = true
exclude = [
  "notebooks/",
]

target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20"]
ignore = ["F401", "E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/kagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
